<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--TUTORIAL-->
	<string name="tut0_1">Welcome</string>
    <string name="tut0_2">Thank you for downloading HBX Binaural Player!\n\nThis tutorial will introduce you to the world of Brainwave Entrainment and Binaural Beats\n\nSwipe left and right to navigate between pages\n\nPress back at any time to exit the tutorial</string>
    <string name="tut1_1">Step 1: Get presets</string>
    <string name="tut1_2">Touch \'Download presets\' to browse available presets</string>
    <string name="tut1_3">Now choose a preset to download it</string>
    <string name="tut2_1">Step 2: Play presets</string>
    <string name="tut2_2">Touch a preset to play it</string>
    <string name="tut2_3">Use the controls at the bottom to control the playback</string>
    <string name="tut3_1">That\'s it!</string>
    <string name="tut3_2">Remember: binaural beats require stereo headphones</string>
    <string name="tut3_3">Swipe again to find out more about binaural beats or press back to exit the tutorial</string>
    <string name="tut4_1">Binaural Beats</string>
    <string name="tut4_2">Binaural beats are auditory processing artifacts, or apparent sounds, the perception of which arises in the brain for specific physical stimuli. By playing 2 slightly different frequencies on the left and right channel, the brain produces a third tone, which frequency is the difference between the 2 frequencies. The effect on the brainwaves depends on the difference in frequencies: for example, if 220 Hz was played in one ear and 230 in the other, then the binaural beat would have a frequency of 10 Hz. These beats can be used for many different things: meditation, improving memory and attention, curing epilepsy, simulating the effects of recreational drugs and many others. Binaural beats have been proven to be completely harmless. However, some individuals may have seizures. For this reason, if you have any familiar who suffers from epilepsy or similar conditions, you should consult your medic before using this software. In order to use binaural beats, you need stereo headphones, and some peace and quiet while you\'re listening to the preset: if something interrupts you, the effect of the beats will wear off almost immediately. Once you made sure that nobody can nag you, put on your headphones, get comfortable, press play and focus on the beats. Do not get scared from the sensations that the beats may cause, or you will \'wake up\' and have to do that all over. It may take some practice.</string>
    <!--MAIN-->
    <string name="app_name">HBX Binaural Player</string>
    <string name="wantTutorial">Do you want to see a short tutorial?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saveFail">Couldn\'t save application settings. Sorry :(\n</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="playPause">Play/Pause</string> <!-- this string is a placeholder and is actually never used in the application-->
    <string name="headphonesWarning">Remember: you need stereo headphones!</string>
    <string name="shitPhone">HBX Playback paused due to slowdown.\nPlease close some applications and try again.</string>
    <string name="loadSuccess">Preset loaded</string>
    <string name="loadFail">Couldn\'t load preset because </string>
    <string name="notAPreset">it\'s not a preset</string>
    <string name="getPresets">Download presets</string>
    <string name="downloadedPreset">Downloaded preset</string>
    <string name="delete">Delete preset?</string>
    <string name="deleted">Preset deleted</string>
    <!-- ABOUT -->
    <string name="aboutHTML">&lt;html&gt;HBX Binaural Player is a free and open source brainwave entrainment application.&lt;br/&gt;This application is made using libBinaural (free java binaural beats library) by me. Both libBinaural and HBX Binaural Player are free software, released under GPL License, available at http://www.gnu.org/licenses/gpl.html&lt;br/&gt;This application comes with ABSOLUTELY NO WARRANTY, EXPLICIT OR IMPLICIT. YOU ARE RESPONSIBLE FOR WHAT YOU DO WITH THE APPLICATION&lt;/html&gt;</string>
    <!--BROWSER -->
    <string name="browser_name">Download presets</string>
    <string name="downloadSuccess">Preset downloaded</string>
    <string name="downloadFail">Download failed</string>
    <string name="noConnection">Internet connection required</string>
    <!-- ACTION MENU -->
    <string name="tutorial">Tutorial</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="market">Rate application</string>
    <string name="fb">Facebook</string>
    <string name="gplus">Google+</string>
    <string name="twitter">Twitter</string>
    <string name="buy">Remove ads</string>
</resources>